// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test checkbox disabled 1`] = `
"<div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal m-checkbox--text-disabled\\"><input type=\\"checkbox\\" disabled=\\"disabled\\" class=\\"m-checkbox__input\\">
    <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
      <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible m-checkbox--disabled\\"></div>
    </div>
    <div class=\\"m-checkbox__label\\"></div>
  </label>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test checkbox group layout direction 1`] = `
"<div class=\\"m-form-item\\" checkbox-group-cover=\\"true\\">
  <div checkbox-group-cover=\\"true\\" class=\\"m-space m--box m-checkbox-group\\" style=\\"flex-direction: column; justify-content: start; flex-wrap: wrap;\\">
    <div style=\\"margin: 0px 0px 8px 0px;\\">
      <div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
          <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
            <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible\\"></div>
          </div>
          <div class=\\"m-checkbox__label\\"></div>
        </label>
        <transition-stub name=\\"m-form-details\\"></transition-stub>
      </div>
    </div>
    <div style=\\"margin: 0px 0px 8px 0px;\\"> </div>
    <div style=\\"margin: 0px;\\">
      <div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
          <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
            <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible\\"></div>
          </div>
          <div class=\\"m-checkbox__label\\"></div>
        </label>
        <transition-stub name=\\"m-form-details\\"></transition-stub>
      </div>
    </div>
  </div>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test checkbox group validation 1`] = `
"<div class=\\"m-form-item\\" checkbox-group-cover=\\"true\\">
  <div checkbox-group-cover=\\"true\\" class=\\"m-space m--box m-checkbox-group\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -4px 0px;\\">
    <div style=\\"margin: 4px 12px 4px 0px;\\">
      <div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal m-checkbox--text-error\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
          <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
            <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--normal-svg m-checkbox--checked m-checkbox--background-error\\"></div>
          </div>
          <div class=\\"m-checkbox__label\\"></div>
        </label>
        <!---->
      </div>
    </div>
    <div style=\\"margin: 4px 12px 4px 0px;\\"> </div>
    <div style=\\"margin: 4px 0px;\\">
      <div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal m-checkbox--text-error\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
          <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
            <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible m-checkbox--border-error\\"></div>
          </div>
          <div class=\\"m-checkbox__label\\"></div>
        </label>
        <!---->
      </div>
    </div>
  </div>
  <div class=\\"m-form-details\\">必须全选</div>
</div>"
`;

exports[`test checkbox group validation 2`] = `
"<div class=\\"m-form-item\\" checkbox-group-cover=\\"true\\">
  <div checkbox-group-cover=\\"true\\" class=\\"m-space m--box m-checkbox-group\\" style=\\"flex-direction: row; justify-content: start; flex-wrap: wrap; margin: -4px 0px;\\">
    <div style=\\"margin: 4px 12px 4px 0px;\\">
      <div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
          <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
            <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--normal-svg m-checkbox--checked\\"></div>
          </div>
          <div class=\\"m-checkbox__label\\"></div>
        </label>
        <!---->
      </div>
    </div>
    <div style=\\"margin: 4px 12px 4px 0px;\\"> </div>
    <div style=\\"margin: 4px 0px;\\">
      <div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
          <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
            <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible\\"></div>
          </div>
          <div class=\\"m-checkbox__label\\"></div>
        </label>
        <!---->
      </div>
    </div>
  </div>
  <!---->
</div>"
`;

exports[`test checkbox readonly 1`] = `
"<div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal\\"><input type=\\"checkbox\\" readonly=\\"true\\" class=\\"m-checkbox__input\\">
    <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
      <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible\\"></div>
    </div>
    <div class=\\"m-checkbox__label\\"></div>
  </label>
  <transition-stub name=\\"m-form-details\\"></transition-stub>
</div>"
`;

exports[`test checkbox validation 1`] = `
"<div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal m-checkbox--text-error\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
    <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
      <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible m-checkbox--border-error\\"></div>
    </div>
    <div class=\\"m-checkbox__label\\"></div>
  </label>
  <div class=\\"m-form-details\\">必须选中</div>
</div>"
`;

exports[`test checkbox validation 2`] = `
"<div class=\\"m-form-item\\" checkbox-cover=\\"true\\"><label class=\\"m-checkbox m--box m-checkbox--normal\\"><input type=\\"checkbox\\" class=\\"m-checkbox__input\\">
    <div class=\\"m-checkbox__checkbox-container m-checkbox--normal-checkbox-container\\">
      <div class=\\"m-checkbox__checkbox m-checkbox--normal-checkbox m-checkbox--border-visible\\"></div>
    </div>
    <div class=\\"m-checkbox__label\\"></div>
  </label>
  <!---->
</div>"
`;
